Revert "Update index.html"
This reverts commit c08f742cf2f938ec62344872f8da9218754bf75c.

--- a/index.html
+++ b/index.html
@@ -283,6 +283,9 @@
 
   <!-- LINKS FOOTER -->
   <footer style="position:fixed; bottom:0; width:100%; text-align:center; z-index:500;">
+
+    <img style="margin:0 -8px; opacity:0.4; z-index:500;" src="./images/footer/separator.png" alt="separator icon"
+      width="25px">
     <a style="text-decoration:none; z-index:500;" target="_blank" href="https://github.com/Chirag-Rajani/Fylo">
       <img src="./images/footer/github-icon.png" alt="Github icon" width="25px">
     </a>
