--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!--BOOTSTRAP ICONS-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css" defer>
 
-  <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
+  <title>Fylo by Chirag Rajani</title>
 </head>
 
 <body>
